force-app/main/default/objects/QuoteLineItem/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <description>Per unit discounted Price</description>
    <formula>UnitPrice  *  (1  - Discount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Per unit discounted Price</inlineHelpText>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>