force-app/main/default/objects/QuoteLineItem/fields/Product_Desc__c.field-meta.xml
<CustomField>
    <fullName>Product_Desc__c</fullName>
    <formula>Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>