force-app/main/default/objects/QuoteLineItem/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Year 1</fullName>
                <label>Y1</label>
            </value>
            <value>
                <fullName>Year 2</fullName>
                <label>Y2</label>
            </value>
            <value>
                <fullName>Year 3</fullName>
                <label>Y3</label>
            </value>
            <value>
                <fullName>Year 4</fullName>
                <label>Y4</label>
            </value>
            <value>
                <fullName>Year 5</fullName>
                <label>Y5</label>
            </value>
            <value>
                <fullName>Year 6</fullName>
                <label>Y6</label>
            </value>
            <value>
                <fullName>Year 7</fullName>
                <label>Y7</label>
            </value>
            <value>
                <fullName>Year 8</fullName>
                <label>Y8</label>
            </value>
            <value>
                <fullName>Year 9</fullName>
                <label>Y9</label>
            </value>
            <value>
                <fullName>Year 10</fullName>
                <label>Y10</label>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>