force-app/main/default/objects/QuoteLineItem/fields/Yearly_Increase__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Increase__c</fullName>
    <description>Yearly Increase over unit price</description>
    <label>Yearly Increase</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>